# Syncore

./: .env.example  .gitignore  .readthedocs.yaml  AGENTS.md  Makefile  README.md  db-init.sh  dev.sh  docker-compose.yml  install.sh  mkdocs.yml  pyproject.toml
.codex/: config.toml
.github/workflows/: build-test.yml  infra-validate.yml  publish-images.yml
apps/cli/: pyproject.toml
apps/cli/syncore_cli/: client.py  config.py  dependencies.py  local_runtime.py  main.py  openai_auth.py  presentation.py  render.py  tui.py  tui_render.py  tui_screens.py  widgets.py  workspace_resolution.py
apps/cli/syncore_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
apps/cli/syncore_cli/commands/: codex_auth.py  metrics.py  notifications.py  openai_auth.py  run.py  system.py  task.py  workspace.py
apps/cli/tests/: test_client.py  test_config.py  test_main.py  test_openai_auth.py  test_tui.py
apps/web/: README.md  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  tsconfig.json
docs/: ARCHITECTURE.md  DECISIONS.md  ENVIRONMENTS.md  IMPLEMENTATION_PLAN.md  LOCAL_MVP_CHECKLIST.md  LOCAL_VALIDATION.md  PROJECT_CHARTER.md  RUNBOOK.md  STATUS.md  TROUBLESHOOTING.md  USER_GUIDE.md  index.md
docs/experimental/: codex-oauth.md  codex-sidecar.md
docs/rtd/: getting-started.md  index.md
infra/docker/: web.Dockerfile  (+1 more)
scripts/: bootstrap.ps1  bootstrap.sh  demo_local_flow.sh  dev_local.sh  init_db.sql  init_local_sqlite.sh  init_sqlite.sql  install_local.sh  run_benchmark_suite.py  structural_guardrails.py  verify_env.sh
(+266 files in other folders)
