[project]
name = "syncore-cli"
version = "0.1.0"
description = "Syncore CLI and TUI"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12,<1.0",
  "rich>=13.0,<14.0",
  "textual>=0.75,<1.0",
  "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9.0"]

[project.scripts]
syncore = "syncore_cli.main:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-q"
